# nanojsonc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  VERSION  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt  example1.c  example2.c  example3.c  example3.json  example4.c
src/: array.c  object.c
test/: CMakeLists.txt  test_array.c  test_object.c
